# tera

./: .gitignore  CLAUDE.md  DEBUG_AND_FIX_PLAN_CN.md  DIAGNOSIS_RESULT_AND_FIX_PLAN.md  FULL_FIX_PLAN.md  HANDOVER.md  METRICS_GUIDE.md  Main.py  Main_bigamp_optimized.py  Main_multi_alpha.py  README.md  SE  SE_Alternating  SE_alpha_total  SE_t  SE_λ  analyze_qy_drop.py  analyze_slope_vs_ratio.py  benchmark_time_comparison.py  bigamp_multi_size.py  bigamp_optimized.py  bigamp_replica_overlap.py  capture_ui.py  compare_metrics.py  debug_ansi_capture.py  debug_app.py  debug_ui.py  debug_variance.py  diagnose_system.py  diagnose_training.py  final_verification.py  generate_final_plot.py  generate_qy_scan.py  inspect_dom.py  main_multi_alpha.py  matrix_en.py  plot_SE_t_results.py  prompt.md  prompt2.md  prompt3.md  (+14 more)
.streamlit/: config.toml
BigAMP/: run_gamp.py  run_gamp_wx_similarity.py
SE_vs_AMP/: SE_vs_AMP_mY_summary.csv
Terao/: run_gamp_noisy.py  run_gamp_random.py  run_gamp_student_similarity.py  run_gamp_wx_similarity.py
Wang/: .gitignore  README_Japanese.md  requirements.txt
_legacy/: CLAUDE.md  compare_legacy.py  run_legacy.py
docs/: README.md
graph_core/: __init__.py  two_point.py  verify_two_point.py
optimization_tests/: VALIDATION_REPORT.md  adaptive_alpha_runner.py  compare_with_phase_check.py  phase_transition_analyzer.py  test_epoch_sweep_step1_20k.py  test_phase_detection.py
precise_phase_analysis/: __init__.py  run_mode2.py  run_mode3.py
scripts/: agd_train.py  generate_all_scans.py  memory_benchmark.py
smf/: cli.py  runner.py
(+1107 files in other folders)
