[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smf"
version = "0.1.0"
description = "Sparse Matrix Factorization Framework - Teacher-Student masked matrix factorization with GPU acceleration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sucia"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "rich>=13.0.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
smf = "smf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["smf"]

[tool.hatch.build.targets.sdist]
include = [
    "/smf",
]
exclude = [
    "/smf/results",
    "/smf/__pycache__",
]
